# datasense

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py
.github/: README.md
.github/workflows/: ci.yml
datasense/: cli.py  loader.py  stats.py  visualize.py
examples/: iris.csv
tests/: test_cli.py  test_loader.py  test_stats.py  test_visualize.py
web/: app.py
