[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasense"
version = "1.0.0"
description = "CSV数据分析命令行工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
datasense = "datasense.cli:main"

[tool.setuptools.packages.find]
include = ["datasense*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
